--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,6 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Node.js path for nvm users
+react.native.node.binary=~/.nvm/versions/node/v24.11.1/bin/node
