--- a/package.json
+++ b/package.json
@@ -10,21 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@craftzdog/react-native-buffer": "^6.1.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "bip39": "^3.1.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-piratechain": "^0.4.14",
-    "react-native-zcash": "^0.7.4"
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-piratechain": "0.5.18",
+    "react-native-qrcode-svg": "^6.3.20",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-svg": "15.2.0",
+    "react-native-vision-camera": "^4.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native-community/cli-platform-android": "^12.3.6",
     "@react-native/babel-preset": "0.74.85",
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
+    "@types/react": "18.2.6",
+    "@types/react-test-renderer": "18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
